Minor French Updates (zigotozor)
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@7373 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/Languages/Old/default-ar.xml
+++ b/Languages/Old/default-ar.xml
@@ -4176,7 +4176,7 @@
 		<control caption="_Cancel"/>
 	</dialog>
 
-	<dialog name="CDownloadEditDlg" cookie="StBuEdBuStEdStEdStEdBuStStStBuStEdStEdBuBuBuBu" caption="Edit Download (Advanced)">
+	<dialog name="CDownloadEditPage" cookie="StBuEdBuStEdStEdStEdBuStStStBuStEdStEdBuBuBuBu" caption="Edit Download (Advanced)">
 		<control caption="WARNING: This dialog provides advanced download editing features for power users which if used incorrectly can and probably will cause corruption."/>
 		<control caption="اسم _ الملف:"/>
 		<control/>
