--- a/Languages/default-fr.xml
+++ b/Languages/default-fr.xml
@@ -3077,7 +3077,7 @@
 	<string id="16997" value="Aucun fichier en lecture. Double-cliquez un fichier média dans votre bibliothèque pour le lire."/>
 	<string id="16998" value="L&#160;&#160;E&#160;&#160;C&#160;&#160;T&#160;&#160;E&#160;&#160;U&#160;&#160;R&#160;&#160;&#160;&#160;&#160;&#160;M&#160;&#160;U&#160;&#160;L&#160;&#160;T&#160;&#160;I&#160;&#160;M&#160;&#160;E&#160;&#160;D&#160;&#160;I&#160;&#160;A&#160;&#160;&#160;&#160;&#160;&#160;S&#160;&#160;H&#160;&#160;A&#160;&#160;R&#160;&#160;E&#160;&#160;A&#160;&#160;Z&#160;&#160;A"/><!-- on one line -->
 	<string id="16999" value="L&#160;i&#160;s&#160;t&#160;e&#160;&#160;&#160;d&#160;e&#160;&#160;&#160;l&#160;e&#160;c&#160;t&#160;u&#160;r&#160;e"/>
-	<string id="17017" value="C'est parti&#160;!"/>
+	<string id="17017" value="C'est parti&#160;:"/>
 	<string id="17018" value="Bienvenue au salon IRC de Shareaza&#160;!"/>
 	<string id="17019" value="Veuillez respecter les autres lors de l'utilisation de ce service"/>
 	<string id="17020" value="Ajouter"/>
