--- a/Languages/default-lt.xml
+++ b/Languages/default-lt.xml
@@ -3087,7 +3087,7 @@
 	<string id="16997" value="Joks failas negrojamas. Grojimui spragtelkite grotuvo failą savo kolekcijoje."/>
 	<string id="16998" value="S &#160; &#160; H &#160; &#160; A &#160; &#160; R &#160; &#160; E &#160; &#160; A &#160; &#160; Z &#160; &#160; A &#160; &#160; &#160; &#160; &#160; M &#160; &#160; E &#160; &#160; D &#160; &#160; I &#160; &#160; J &#160; &#160; A &#160; &#160; &#160; &#160; &#160; S &#160; &#160; I &#160; &#160; S &#160; &#160; T &#160; &#160; E &#160; &#160; M &#160; &#160; A"/>
 	<string id="16999" value="G R O J A R A Š T I S"/>
-	<string id="17017" value="Kalbėk!"/>
+	<string id="17017" value="Kalbėk:"/>
 	<string id="17018" value="Sveiki! Čia Shareaza pokalbiai!"/>
 	<string id="17019" value="Gerbkite kitus naudodamiesi šia paslauga"/>
 	<string id="17020" value="Pridėti"/>
