--- a/Languages/default-tr.xml
+++ b/Languages/default-tr.xml
@@ -3059,7 +3059,7 @@
 	<string id="16997" value="Oynayacak dosya yok. Kütüphanenizdeki bir ortam dosyasını oynatmak için çift-tıklayın."/>
 	<string id="16998" value="S &#160; &#160; H &#160; &#160; A &#160; &#160; R &#160; &#160; E &#160; &#160; A &#160; &#160; Z &#160; &#160; A &#160; &#160; &#160; &#160; &#160; O &#160; &#160; R &#160; &#160; T &#160; &#160; A &#160; &#160; M &#160; &#160; &#160; &#160; &#160; S &#160; &#160; İ &#160; &#160; S &#160; &#160; T &#160; &#160; E &#160; &#160; M &#160; &#160; İ"/><!-- on one line -->
 	<string id="16999" value="O Y N A T M A  L İ S T E S İ"/>
-	<string id="17017" value="Sohbet!"/>
+	<string id="17017" value="Sohbet:"/>
 	<string id="17018" value="Shareaza Sohbetine Hoşgeldiniz!"/>
 	<string id="17019" value="Bu servisi kullanırken diğer kullanıcılara saygı göstermeniz gerektiğini unutmayın"/>
 	<string id="17020" value="Ekle"/>
