--- a/Languages/default-no.xml
+++ b/Languages/default-no.xml
@@ -1632,19 +1632,19 @@
 		<text group="25" align="middle" id="G2Leaves">%i leaves</text>
 		<newline group="20" gap="2"/>
 
-		<icon group="30" command="ID_NETWORK_ED2K"/><gap group="30" size="4"/>
-		<text group="30" align="middle" format="b">eDonkey: </text>
-		<text group="31" align="middle">Ikke koblet til</text>
-		<text group="32" align="middle">Kobler til...</text>
-		<text group="33" align="middle">Koblet til</text>
-		<newline group="30" gap="2"/>
-
 		<icon group="10" command="ID_NETWORK_G1"/><gap group="10" size="4"/>
 		<text group="10" align="middle" format="b">Gnutella1: </text>
 		<text group="11" align="middle">Koblet fra</text>
 		<text group="12" align="middle">Kobler til...</text>
 		<text group="13" align="middle">Koblet til</text>
 		<newline group="10" gap="2"/>
+
+		<icon group="30" command="ID_NETWORK_ED2K"/><gap group="30" size="4"/>
+		<text group="30" align="middle" format="b">eDonkey: </text>
+		<text group="31" align="middle">Ikke koblet til</text>
+		<text group="32" align="middle">Kobler til...</text>
+		<text group="33" align="middle">Koblet til</text>
+		<newline group="30" gap="2"/>
 
 		<group id="2">
 			<para align="center">
@@ -3172,6 +3172,9 @@
 
 <!-- Localised Dialog Text, the "cookie" verifies that the dialog matches the skin -->
 <dialogs>
+	<dialog name="CGeneralSettingsGroup" cookie="" caption="Generelt">
+	</dialog>
+
 	<dialog name="CSettingSheet" cookie="SyBuBuBu#3" caption="Innstillinger">
 		<control/>
 		<control caption="OK"/>
@@ -3179,8 +3182,6 @@
 		<control caption="Bruk"/>
 		<control/>
 	</dialog>
-
-	<dialog name="CGeneralSettingsGroup" cookie="" caption="Generelt"/>
 
 	<dialog name="CGeneralSettingsPage" cookie="BuBuBuBuStCoBuBuBuBuBuBuBuBuBuSyStEdmsStmsBuStCoStCo" caption="Generelt">
 		<control caption="_Generelt:"/>
@@ -3282,7 +3283,8 @@
 		<control caption="Nedlastingsguiden vil bare laste ned filer i denne listen. Andre filer vil bli åpnet i din internettleser. Shareaza må være i gang for å kunne ta imot nedlastinger."/>
 	</dialog>
 
-	<dialog name="CInternetSettingsGroup" caption="Internett"/>
+	<dialog name="CInternetSettingsGroup" caption="Internett">
+	</dialog>
 
 	<dialog name="CConnectionSettingsPage" cookie="BuStCoStCoStEdBuBuBuStCoStCoBuStCoBuBuStEdmsStEdms" caption="Forbindelse">
 		<control caption="_Inngående adresse:"/>
